@@ -7,6 +7,9 @@ Unreleased
 
 NOTE: Upgrading from 0.49 or earlier versions requires a full cluster restart
 
+ - Fixed a race condition that could cause a `CREATE TABLE` statement
+   immediately after a `DROP TABLE` statement to fail.
+
  - Fixed a minor memory leak that occurred if custom schemas were deleted.
 
  - Fixed incorrect comparison in query by IP type
